# zenflow

./: .ai-learning-data.json  .aider.chat.history.md  .aider.input.history  .babelrc  .copilotrc.json  .dependency-cruiser.cjs  .dockerignore  .eslintcache  .eslintignore  .eslintrc.cjs  .eslintrc.export-restrictions.js  .eslintrc.google.json  .eslintrc.js  .eslintrc.json  .eslintrc.ts.json  .gitattributes  .gitignore  .gitmodules  .mcp.json  .mise.toml  .npmignore  .npmrc  .prettierignore  .prettierrc.cjs  .releaserc.json  .roomodes  .sunlint.json  .swcrc  .sync-report.json  .sync-status.json  .tsbuildinfo  2-smart-gemini-fixer.sh  ADAPTIVE_MEMORY_QUICK_START.md  ADVANCED_MCP_TOOLS_GUIDE.md  ADVANCED_SWARM_FIX_REPORT.md  AG2_INTEGRATION.md  AGENTS.md  AI_ENHANCEMENT_INTEGRATION_COMPLETE.md  AI_ROADMAP.md  API_SERVER_ACTIVATION_REPORT.md  (+565 more)
native/swarm_neural_nifs/: Cargo.toml
native/swarm_neural_nifs/src/: lib.rs
src/bindings/: Cargo.toml  index.d.ts  index.ts  lib.rs  package-lock.json  package.json  wasm-binding-interface.js.map  wasm-binding-interface.ts  zen-orchestrator-wrapper.ts
src/bindings/2/: index.d.ts  index.js
src/bindings/fallback/: ruv_fann_wasm.ts
src/bindings/src/: lib.rs
src/bindings/test/: test.js  test.ts
src/fact-core/: Cargo.toml  build-and-test.sh  rustfmt.toml
src/fact-core/src/: auto_orchestrator.rs  cache.rs  lib.rs  processor.rs  templates.rs
src/neural/neuro-divergent/: Cargo.toml  amp  rustfmt.toml
zen-swarm-orchestrator/: Cargo.toml  lib.rs  publish-all-crates.sh  test-simd-fix.mjs  test-wasm.js
zen-swarm-orchestrator/benches/: agent_spawn_bench.rs  orchestration_bench.rs  wasm_bench.rs
zen-swarm-orchestrator/benchmarking/: Cargo.toml
zen-swarm-orchestrator/crates/zen-swarm-agents/: README.md
zen-swarm-orchestrator/crates/zen-swarm-core/: Cargo.toml
zen-swarm-orchestrator/crates/zen-swarm-daa/: build-wasm-minimal.sh
zen-swarm-orchestrator/crates/zen-swarm-enhanced/: Cargo.toml
zen-swarm-orchestrator/crates/zen-swarm-mcp/: SCHEMA_ISSUES.md
zen-swarm-orchestrator/crates/zen-swarm-ml/: Cargo.toml  STATISTICAL_ARCHITECTURE.md
zen-swarm-orchestrator/crates/zen-swarm-persistence/: README.md
zen-swarm-orchestrator/crates/zen-swarm-vector/: Cargo.toml
zen-swarm-orchestrator/crates/zen-swarm-wasm/: Cargo.toml  README.md  verify_simd.sh
zen-swarm-orchestrator/crates/zen-swarm-wasm-unified/: README.md
zen-swarm-orchestrator/examples/: cognitive_diversity.rs  complete_enhanced_system.rs  daa-service-demo.js  fibonacci_demo.rs  forecasting_demo.rs  neural_training.rs  wasm_swarm_demo.js
zen-swarm-orchestrator/examples/browser/: forecasting.html
zen-swarm-orchestrator/examples/web_demo/: demo.js
zen-swarm-orchestrator/models/claude-code-optimizer/: benchmark_results.json  claude_optimizer.json  efficiency_report.json  enhanced_benchmark_results.json
zen-swarm-orchestrator/models/lstm-coding-optimizer/: training_metrics.json
zen-swarm-orchestrator/models/swarm-coordinator/: benchmark_results.json  enhanced_training_report.json  ensemble_coordinator.json
zen-swarm-orchestrator/models/tcn-pattern-detector/: optimized_tcn_model.json
zen-swarm-orchestrator/npm/: .eslintrc.json  audit-before-axios-fix.json  audit-before.json  babel.config.cjs  claude-swarm.sh  coverage-history.json  eslint.config.js  jest-wasm-transformer.cjs  jest.config.cjs  package-lock.json  package.json  test-db-updates.js  test-flags.js  test-mcp-db.js  test-mcp-fixes.js  test-mcp-persistence.js  test-memory-storage.js  test-pr34-local.js  test-wasm-loading.js  test-workflow-fix.js  validate-error-handling.js  verify-db-updates.js
zen-swarm-orchestrator/npm/config/: rollup.config.js  ruv-swarm.config.json  tsconfig.json  webpack.config.js
zen-swarm-orchestrator/npm/docker/: run-mcp-fixes-tests.sh  test-mcp-stdio.js  test-runner.js
zen-swarm-orchestrator/npm/examples/: mcp-workflows.js  neural-example.js  neural-presets-demo.js  simd-claude-flow-demo.js
zen-swarm-orchestrator/npm/scripts/: build.js  deploy.sh  docker-test-suite.sh  generate-docs.js  mcp-server.sh  run-docker-tests.sh  test-npx-commands.sh
zen-swarm-orchestrator/npm/src/: agent.ts  benchmark.js  claude-flow-enhanced.js  cli-diagnostics.js  cognitive-pattern-evolution.js  daa-cognition.js  daa-service.d.ts  daa-service.js  diagnostics.js  errors.js  index-enhanced.d.ts  index-enhanced.js  index.d.ts  index.js  index.ts  logger.js  logging-config.js  mcp-daa-tools.js  mcp-tools-benchmarks.js  mcp-tools-enhanced.js  meta-learning-framework.js  neural-agent.js  neural-coordination-protocol.js  neural-network-manager.js  neural-network.ts  neural.js  performance-benchmarks.js  performance.js  persistence-pooled.js  persistence.js  schemas.js  security.js  singleton-container.js  sqlite-pool.js  sqlite-worker.js  types.ts  utils.ts  wasm-loader.js  wasm-loader2.js  wasm-memory-optimizer.js
zen-swarm-orchestrator/npm/test/: advanced-features-comprehensive.test.js  agent-task-binding-test.js  claude-integration-comprehensive.test.js  claude-md-cli-integration.test.js  claude-md-protection-simple.test.js  claude-md-protection.test.js  comprehensive-orchestration-test.js  comprehensive-performance-validation.test.js  comprehensive-test-orchestrator.js  core-systems-comprehensive.test.js  coverage-dashboard.js  coverage-edge-cases.test.js  coverage-integration.test.js  daa-functionality-comprehensive.test.js  daa-service.test.js  direct-mcp-test.js  docker-cross-platform.test.js  docker-mcp-validation.js  docker-performance-suite.js  edge-case-coverage.test.js  error-handling-comprehensive.test.js  global-setup.js  (+62 more)
zen-swarm-orchestrator/scripts/: build-forecasting-wasm.sh  build-neural-wasm.sh  optimize-wasm.sh  publish-npm.sh  validate-wasm-integration.sh
zen-swarm-orchestrator/src/: a2a.rs  a2a.rs.backup
zen-swarm-orchestrator/test/: mcp-protocol-validation.js  swarm-topology-validation.js  validate-mcp-functionality.js  verify-complete-functionality.sh
zen-swarm-orchestrator/tests/: cognitive_diversity.rs  daa_tests.rs  failure_scenarios.rs  performance_benchmarks.rs
(+8208 files in other folders)
