[package]
name = "ruv-fann-node-bindings"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ruv-fann = { path = "../../ruv-FANN" }
napi = { version = "2.16", features = ["async"] }
napi-derive = "2.16"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
serde_json = "1.0"

[build-dependencies]
napi-build = "2.1"