[package]
name = "fact-tools"
version = "1.1.0"
authors = ["mikkihugo"]
edition = "2024"
description = "FACT (Fast Augmented Context Tools) - High-performance context processing engine for AI applications"
homepage = "https://github.com/mikkihugo/claude-code-zen"
repository = "https://github.com/mikkihugo/claude-code-zen"
license = "MIT"
readme = "README.md"
keywords = ["fact", "cognitive", "ai", "cache", "performance"]
categories = ["algorithms", "caching", "command-line-utilities", "web-programming"]

[lib]
name = "fact_tools"
path = "src/lib.rs"

[[bin]]
name = "fact-tools"
path = "src/bin/main.rs"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ahash = "0.8"
smallvec = "1.13"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16"

# CLI dependencies
clap = { version = "4.4", features = ["derive", "cargo", "env", "unicode"] }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# Logging and diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Performance monitoring
dashmap = "5.5"
crossbeam = "0.8"
rayon = "1.8"

# Optional features
reqwest = { version = "0.11", features = ["json"], optional = true }
indicatif = { version = "0.17", optional = true }
colored = { version = "2.0", optional = true }

# GitHub API integration
octocrab = { version = "0.38", optional = true }
url = { version = "2.5", optional = true }
regex = { version = "1.10", optional = true }
base64 = { version = "0.22", optional = true }

# GraphQL support for GitHub API v4
graphql_client = { version = "0.14", optional = true }
serde_derive = { version = "1.0", optional = true }

# BEAM ecosystem parsing
toml = { version = "0.8", optional = true }

# Auto orchestration dependencies
futures = { version = "0.3", optional = true }
notify = { version = "7.0", optional = true }
walkdir = { version = "2.5", optional = true }

# Storage dependencies
sled = { version = "0.34", optional = true }
dirs = { version = "5.0", optional = true }
async-trait = { version = "0.1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tempfile = "3.8"
mockall = "0.12"

[features]
default = ["cli", "progress", "color"]
cli = []
progress = ["indicatif"]
color = ["colored"]
network = ["reqwest"]
github = ["octocrab", "url", "regex", "base64", "network"]
github-graphql = ["github", "graphql_client", "serde_derive"]
beam = ["toml", "regex"]
auto = ["futures", "notify", "walkdir", "regex"]
storage = ["sled", "dirs", "async-trait", "regex"]
mnesia = ["async-trait"]  # Future: Add rustler when available
full = ["cli", "progress", "color", "network", "github", "beam", "auto", "storage"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1


[[example]]
name = "basic"
path = "examples/basic.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]