[package]
name = "zen-swarm-wasm"
version.workspace = true
edition = "2021"
authors = ["rUv Contributors"]
description = "WebAssembly bindings for ruv-swarm neural network orchestration"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "console", "Performance", "PerformanceTiming"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }
# wee_alloc removed due to security vulnerability GHSA-rc23-xxgq-x27g
getrandom = { version = "0.2", features = ["js"] }
bincode = "1.3"
num-traits = "0.2"

# SIMD optimization dependencies
wide = { version = "0.7", features = ["serde"] }

# Core dependencies with full functionality
zen-neural = { path = "../../../zen-neural", version = "0.1.0", default-features = false, features = ["no_std", "serde", "logging"] }
zen-swarm-core = { path = "../zen-swarm-core", default-features = false, features = ["wasm"], optional = true }
zen-swarm-ml = { path = "../zen-swarm-ml", features = ["wasm"], optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook", "simd"]
# wee_alloc feature removed due to security vulnerability
simd = []  # SIMD support using 'wide' crate
simd128 = ["simd"]
no-simd = []
full = ["zen-swarm-core", "zen-swarm-ml"]
core = ["zen-swarm-core"]
ml = ["zen-swarm-ml"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
dwarf-debug-info = true

# SIMD configuration is handled via RUSTFLAGS environment variable
# and build.rs script for better cross-platform compatibility