[package]
name = "zen-swarm-agents"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Specialized AI agents for Zen Swarm"

[dependencies]
zen-swarm-core = { path = "../zen-swarm-core" }