[package]
name = "zen-swarm-wasm-unified"
version.workspace = true
edition = "2021"
authors = ["The ruv-swarm Contributors"]
description = "Unified WASM module exposing all ruv-FANN ecosystem capabilities"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruv-fann/ruv-swarm"
keywords = ["wasm", "neural-network", "swarm", "ruv-fann", "forecasting"]
categories = ["wasm", "science", "algorithms", "mathematics", "concurrency"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["alloc"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
console_error_panic_hook = "0.1"
# wee_alloc removed due to security vulnerability GHSA-rc23-xxgq-x27g
rayon = { version = "1.8", optional = true }
lazy_static = "1.4"

# Internal crate dependencies with WASM features
zen-swarm-core = { path = "../zen-swarm-core", features = ["wasm"], default-features = false }
zen-swarm-ml = { path = "../zen-swarm-ml", features = ["wasm"], default-features = false }
zen-swarm-wasm = { path = "../zen-swarm-wasm", default-features = false }
zen-swarm-persistence = { path = "../zen-swarm-persistence", default-features = false }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Performance",
  "WorkerGlobalScope",
  "DedicatedWorkerGlobalScope",
  "Navigator",
  "Window",
]

# WASM optimization features
[features]
default = ["simd", "parallel", "optimize"]
simd = []
parallel = ["rayon"]
optimize = []
# wee_alloc_feature removed due to security vulnerability
console_error_panic_hook = []
ruv-fann = []
neuro-divergent = []

# WASM-specific optimizations
[package.metadata.wasm-pack]
"wasm-pack-plugin" = "wasm-pack-plugin"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-simd"]